fix(search): make whole result item an anchor (#6132)
Before, it was a React Link with "space" between lines.

Now, it is an HTML anchor covering the whole div.

--- a/client/src/ui/molecules/search/index.scss
+++ b/client/src/ui/molecules/search/index.scss
@@ -139,7 +139,6 @@
 
     .result-item {
       border-bottom: 1px solid var(--border-secondary);
-      padding: 0.5rem;
       word-break: break-word;
       background: var(--background-secondary);
       font-size: var(--type-smaller-font-size);
@@ -155,6 +154,10 @@
         code {
           font-size: 0.8125rem;
         }
+      }
+      a {
+        display: block;
+        padding: 0.5rem;
       }
     }
 
